# DENARRATOR

./: .gitignore  Negativraum.html  algebra_module.html  app.js  i2_module.html  i2_module.js  izer.html  izer.js  mirror_module.html  mirror_module.js  morphogo.html  nuklear.html  nuklear.js  package-lock.json  package.json  particles.html  particles.js  pictonal.html  pictonal.js  prim.html  prim_module.js  projektor.html  projektor.js  rcf_rzb.html  rcf_rzb.js  styles.css  testmodule.html  testmodule.js  theremin.html  theremin.js  unified_tabs.html
.github/workflows/: windows-build.yml
lazy_quenzer/: app.js  index.html  styles.css
scripts/: backup_latest.sh
src/: main.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/analysis/: correlation.js  partialTracking.js  spectralFeatures.js  stft.js
src/audio/: bandAutoConfig.js  barkBandRanges.js  concat.js  io.js  logBandRanges.js  melBandRanges.js  wav.js  windowing.js
src/engines/: alignEngine.js  index.js  machineEngine.js  spectralEngine.js  waveAlgebraEngine.js  waveAlgebraSyntax.js
src/render/: bridgeRender.js
src/state/: store.js
src/ui/: controls.js  dom.js  tabs.js  theme.css  waveformView.js
src/utils/: base64.js  math.js  tauriFiles.js
