[package]
name = "morphogo_desktop"
version = "0.1.0"
description = "MORPH.OGO desktop app"
authors = ["aelioth"]
edition = "2021"

[lib]
name = "morphogo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rfd = "0.15"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.10"
